[gd_scene load_steps=38 format=3 uid="uid://dye7h3iwsbaj4"]

[ext_resource type="Texture2D" uid="uid://du4dcvhegjnbx" path="res://Images/Map/chest_collection.png" id="1_87dg0"]
[ext_resource type="Script" uid="uid://diyg7sqaaqyw1" path="res://Scripts/map_level_controller.gd" id="1_lxa30"]
[ext_resource type="Script" uid="uid://h6o0sd3yiicg" path="res://Scripts/camera_2d_move_map.gd" id="3_ijeka"]
[ext_resource type="Texture2D" uid="uid://bkyucjwobn1js" path="res://Images/Buttons/show_level.png" id="3_uxesv"]
[ext_resource type="PackedScene" uid="uid://v3525e5fn7dq" path="res://Scenes/level_button.tscn" id="4_1xnci"]
[ext_resource type="FontFile" uid="uid://d1yahlnho8lp3" path="res://Fonts/WANTED.ttf" id="4_moljf"]
[ext_resource type="FontFile" uid="uid://c2xx4dk6wwoiw" path="res://Fonts/AltarGothicDemo-Regular.otf" id="5_b7rwn"]
[ext_resource type="Texture2D" uid="uid://1n1w310cbu03" path="res://Images/Buttons/finished_enemy.png" id="5_mvypx"]
[ext_resource type="Texture2D" uid="uid://d22ll7okmawhl" path="res://Images/Map/Synapse 2.jpg" id="7_ay0fg"]
[ext_resource type="Resource" uid="uid://dd8nma10h4wb7" path="res://Data/Levels/level01.tres" id="11_iht84"]
[ext_resource type="Resource" uid="uid://bm4gb4pyl7veu" path="res://Data/Levels/level02.tres" id="11_sdts0"]
[ext_resource type="Resource" uid="uid://ceyacv28hhx3b" path="res://Data/Levels/level03.tres" id="12_ay0fg"]
[ext_resource type="Resource" uid="uid://c10oplxgvpd81" path="res://Data/Levels/level04.tres" id="13_gojlf"]
[ext_resource type="Resource" uid="uid://gkhbeufig7mr" path="res://Data/Levels/level05.tres" id="14_ilbj0"]
[ext_resource type="Resource" uid="uid://0a5fjhnww8au" path="res://Data/Levels/level06.tres" id="15_oo8lt"]
[ext_resource type="Resource" uid="uid://bun3otguqx3sq" path="res://Data/Levels/level07.tres" id="16_g7dyv"]
[ext_resource type="AudioStream" uid="uid://begcjf3cmciav" path="res://Sounds/scroll.wav" id="18_sdts0"]
[ext_resource type="AudioStream" uid="uid://bj5xtytbevgur" path="res://Sounds/scroll_out.wav" id="19_ay0fg"]
[ext_resource type="Script" uid="uid://c3mqor6y0xlrs" path="res://Scripts/world_bounds_debug.gd" id="19_gojlf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7urs"]
bg_color = Color(0.256, 0.256, 0.256, 0.74)
border_width_top = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i7urs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_asnrm"]
texture = ExtResource("1_87dg0")
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x48ov"]
texture = ExtResource("1_87dg0")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iwshb"]
texture = ExtResource("1_87dg0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpfjx"]
bg_color = Color(0.256, 0.256, 0.256, 0.74)
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_moljf"]
texture = ExtResource("3_uxesv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mvypx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mvypx"]
bg_color = Color(0.489483, 0.392902, 0.211285, 0.890196)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ay0fg"]
bg_color = Color(0.255978, 0.199617, 0.0930941, 0.890196)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdts0"]
bg_color = Color(0.866667, 0.745098, 0.52549, 0.890196)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gojlf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_sdts0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SelectLevelPanel2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(491, -389)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SelectLevelPanel2/Button:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/AnimateParts/Panel:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 359)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/AnimateParts/Panel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/AnimateParts/Panel:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/AnimateParts/Panel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oo8lt"]
resource_name = "closeScene"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/AnimateParts/Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.596313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(834, 0), Vector2(640, 365), Vector2(640, 365)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/AnimateParts/Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.596313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-36, -25), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/AnimateParts/Panel:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.596313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.523599, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/AnimateParts/Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_gojlf"]
resource_name = "hide_select_level_menu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SelectLevelPanel2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(491, -48), Vector2(491, -389)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SelectLevelPanel2/Button:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.758172,
"start_offset": 0.0465136,
"stream": ExtResource("19_ay0fg")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_ilbj0"]
resource_name = "openScene"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/AnimateParts/Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.196313, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(640, 365), Vector2(640, 365), Vector2(834, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/AnimateParts/Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.196313, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(-36, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/AnimateParts/Panel:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.196313, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.523599]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/AnimateParts/Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_mvypx"]
resource_name = "show_select_level_menu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SelectLevelPanel2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(491, -389), Vector2(491, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SelectLevelPanel2/Button:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("18_sdts0")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ay0fg"]
_data = {
&"RESET": SubResource("Animation_sdts0"),
&"closeScene": SubResource("Animation_oo8lt"),
&"hide_select_level_menu": SubResource("Animation_gojlf"),
&"openScene": SubResource("Animation_ilbj0"),
&"show_select_level_menu": SubResource("Animation_mvypx")
}

[node name="Map" type="Node2D"]
script = ExtResource("1_lxa30")
buttons = Array[NodePath]([NodePath("ButtonLevels/LevelButton_1"), NodePath("ButtonLevels/LevelButton_2"), NodePath("ButtonLevels/LevelButton_3"), NodePath("ButtonLevels/LevelButton_4"), NodePath("ButtonLevels/LevelButton_5"), NodePath("ButtonLevels/LevelButton_6"), NodePath("ButtonLevels/LevelButton_7")])
level_ids = Array[String](["1", "2", "3", "4", "5", "6", "7"])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DownPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i7urs")

[node name="GoToCollection" type="Button" parent="CanvasLayer/DownPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.439
anchor_top = 0.069
anchor_right = 0.533
anchor_bottom = 0.903
offset_left = 0.039978
offset_top = 0.0319996
offset_right = -0.120026
offset_bottom = -0.0160065
theme_override_styles/focus = SubResource("StyleBoxEmpty_i7urs")
theme_override_styles/hover = SubResource("StyleBoxTexture_asnrm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x48ov")
theme_override_styles/normal = SubResource("StyleBoxTexture_iwshb")

[node name="UpPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.086
offset_bottom = 0.039999
theme_override_styles/panel = SubResource("StyleBoxFlat_cpfjx")

[node name="SelectLevelPanel2" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.767
anchor_top = -0.136
anchor_right = 0.995
anchor_bottom = 0.869
offset_left = 0.119995
offset_top = -340.04
offset_right = 0.199951
offset_bottom = -339.84
theme_override_styles/panel = SubResource("StyleBoxTexture_moljf")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/SelectLevelPanel2"]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 58.0
offset_right = 139.0
offset_bottom = 101.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_moljf")
theme_override_font_sizes/normal_font_size = 40
text = "WANTED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/SelectLevelPanel2"]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 226.0
offset_right = 139.0
offset_bottom = 250.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_moljf")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "DEAD [font_size=13]OR[/font_size] ALIVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoolerTextureRect" type="TextureRect" parent="CanvasLayer/SelectLevelPanel2/RichTextLabel2"]
layout_mode = 0
offset_left = 68.0
offset_right = 121.0
offset_bottom = 23.0
texture = ExtResource("5_mvypx")
expand_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="CanvasLayer/SelectLevelPanel2"]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 204.0
offset_right = 139.0
offset_bottom = 225.0
theme_override_colors/default_color = Color(0.670588, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_b7rwn")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "Stachi"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyTextureRect" type="TextureRect" parent="CanvasLayer/SelectLevelPanel2"]
layout_mode = 1
anchors_preset = -1
offset_left = 24.0
offset_top = 100.0
offset_right = 124.0
offset_bottom = 200.0
expand_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/SelectLevelPanel2"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 253.0
offset_right = 128.0
offset_bottom = 297.0
theme_override_fonts/font = ExtResource("4_moljf")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_mvypx")
theme_override_styles/hover = SubResource("StyleBoxFlat_mvypx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ay0fg")
theme_override_styles/normal = SubResource("StyleBoxFlat_sdts0")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/SelectLevelPanel2/Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 104.0
offset_bottom = 47.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_moljf")
theme_override_font_sizes/normal_font_size = 40
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoRichTextLabel" type="RichTextLabel" parent="CanvasLayer/SelectLevelPanel2"]
layout_mode = 0
offset_left = 15.0
offset_top = 299.0
offset_right = 136.0
offset_bottom = 318.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimateParts" type="Node2D" parent="CanvasLayer"]

[node name="Panel" type="Panel" parent="CanvasLayer/AnimateParts"]
offset_right = 640.0
offset_bottom = 359.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gojlf")

[node name="MapSprite2D" type="Sprite2D" parent="."]
position = Vector2(-6, -41)
texture = ExtResource("7_ay0fg")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-687, -1)
script = ExtResource("3_ijeka")
world_bounds = Rect2(-4000, -3000, 8000, 6000)
min_zoom = 0.25

[node name="ButtonLevels" type="Node" parent="."]

[node name="LevelButton_1" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
offset_left = -223.0
offset_top = 321.0
offset_right = -191.0
offset_bottom = 363.0
level_name = "Sir Valorion"
config = ExtResource("11_iht84")

[node name="LevelButton_2" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
offset_left = -268.0
offset_top = 211.0
offset_right = -236.0
offset_bottom = 253.0
level_name = "Dame Astra"
config = ExtResource("11_sdts0")

[node name="LevelButton_3" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
offset_left = -374.0
offset_top = 96.0
offset_right = -342.0
offset_bottom = 138.0
level_name = "Lord Cedric"
config = ExtResource("12_ay0fg")

[node name="LevelButton_4" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
offset_left = -566.0
offset_top = 543.0
offset_right = -534.0
offset_bottom = 585.0
level_name = "Sir Leoric"
config = ExtResource("13_gojlf")

[node name="LevelButton_5" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
offset_left = -516.0
offset_top = 233.0
offset_right = -484.0
offset_bottom = 275.0
level_name = "Sir Rothelm"
config = ExtResource("14_ilbj0")

[node name="LevelButton_6" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
offset_left = -771.0
offset_top = 285.0
offset_right = -739.0
offset_bottom = 327.0
level_name = "Doomspire"
make_cooler = true
config = ExtResource("15_oo8lt")

[node name="LevelButton_7" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
offset_left = -993.0
offset_top = 550.0
offset_right = -961.0
offset_bottom = 592.0
level_name = "Grinblade"
config = ExtResource("16_g7dyv")

[node name="LevelButton" parent="ButtonLevels" instance=ExtResource("4_1xnci")]
is_unlock = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ay0fg")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="WorldBoundsDebug" type="Node2D" parent="."]
z_index = 4096
script = ExtResource("19_gojlf")
world_bounds = Rect2(-4000, -3000, 8000, 6000)
color = Color(0, 1, 0.188235, 0.8)
line_width = 10.0
draw_in_game = false

[connection signal="button_down" from="CanvasLayer/DownPanel/GoToCollection" to="." method="_on_go_to_collection_button_down"]
